jobs/job_60783810/uncert/errors/benchmark_606/solver_2.txt
INFO: Pointer analysis took 0 sec 3 ms
input.cc:201:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
input.cc:201:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
input.cc:201:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
3 errors generated.
1KOgy_Ptr2Arr.c:201:34: error: use of undeclared identifier 'node1_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                 ^
1KOgy_Ptr2Arr.c:201:52: error: use of undeclared identifier 'node2_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                   ^
1KOgy_Ptr2Arr.c:201:70: error: use of undeclared identifier 'node3_index'
void (*nodes[3])(void)  = {      node1_index,      node2_index,      node3_index};
                                                                     ^
1KOgy_Ptr2Arr.c:368:5: warning: unused label 'ERROR' [-Wunused-label]
    ERROR: __VERIFIER_error();
    ^~~~~~~
1 warning and 3 errors generated.
